--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -2,6 +2,9 @@
   "name": "nextjs-app",
   "version": "0.1.0",
   "private": true,
+  "files.associations": {
+    "*.scss": "postcss"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,10 +15,14 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "sass": "^1.51.0"
+    "sass": "^1.51.0",
+    "stylelint-config-recommended": "^7.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24"
   }
 }
