--- a/tesla-clone/package.json
+++ b/tesla-clone/package.json
@@ -17,7 +17,8 @@
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-reveal": "^1.2.2"
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "eslint": "8.19.0",
